# estadistica

./: README.md  calc.py  pubspec.yaml  solver  solver.cpp
Estadistica/: AnalizadorEstadisticoDatosAgrupados.py  analizadorEstadisticoDefinitivo.py  calculadora distribuciones.py  calculadora momentos.py  pruebaTestadistica.py  simulaciones1.py
android/: build.gradle.kts  log.txt  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/calculadora_estadistica/: MainActivity.kt
android/app/src/main/python/: python_wrapper.py  statistics_engine.py
backend/: README.md  main.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: Calculator.dart  DistributionsGuideScreen.dart  GroupedDataScreen.dart  MGFGuideScreen.dart  MomentsScreen.dart  MonteCarloScreen.dart  TheoreticalDistributionsScreen.dart  main.dart
lib/core/ffi/: stat_bindings.dart
lib/core/utils/: number_formatter.dart
lib/features/hypothesis_test/domain/entities/: test_result.dart
lib/features/hypothesis_test/domain/usecases/: hypothesis_orchestrator.dart
lib/features/hypothesis_test/views/: advanced_hypothesis_screen.dart  critical_value_screen.dart  p_value_calculator_screen.dart
lib/features/hypothesis_test/widgets/: hypothesis_graph.dart
lib/features/project_defense/ui/: ProyectoParte1ANOVA.dart  ProyectoParte2RLM.dart
lib/services/: api_service.dart  stat_engine_ffi.dart
lib/views/: inference_calculator_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_lib/: CMakeLists.txt
native_lib/include/: stat_engine.h
native_lib/src/: anova_rlm.cpp  hypothesis.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
